syntax = "proto3";

package example;

option java_multiple_files = true;
option java_package = "com.example.greetservice";

message GreetRequest {
  string first_name  = 1;
  string last_name = 2;
}

message GreetResponse {
  string message  = 1;
}

message HelloRequest {
  string first_name  = 1;
  string last_name = 2;
}

message HelloResponse {
  string message  = 1;
}

service GreetService{
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc Hello(HelloRequest) returns (HelloResponse);
}
